# Vesper

./: .gitignore  Cargo.toml  NOTICE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md
.cargo/: config.toml
.github/workflows/: desktop-ci.yml  flutter-ci.yml  mobile-hosts-ci.yml  mobile-lib-release.yml
crates/audio/player-audio-cpal/: Cargo.toml
crates/backend/player-backend-ffmpeg/: Cargo.toml
crates/core/player-core/: Cargo.toml
crates/core/player-download/: Cargo.toml
crates/core/player-ffi/: Cargo.toml  cbindgen.toml
crates/core/player-ffi-resolver/: Cargo.toml
crates/core/player-ffi-resolver/src/: lib.rs
crates/core/player-playlist/: Cargo.toml
crates/core/player-policy-resolver/: Cargo.toml
crates/core/player-preload/: Cargo.toml
crates/core/player-runtime/: Cargo.toml
crates/extension/player-dash-hls-bridge/: Cargo.toml
crates/extension/player-decoder-d3d11/: Cargo.toml
crates/extension/player-decoder-fixture/: Cargo.toml
crates/extension/player-decoder-videotoolbox/: Cargo.toml
crates/extension/player-decoder-videotoolbox/src/: lib.rs
crates/extension/player-decoder-windows-d3d11-fixture/: Cargo.toml
crates/extension/player-ffmpeg/: Cargo.toml
crates/extension/player-ffmpeg/src/: lib.rs  muxer.rs
crates/extension/player-remux-ffmpeg/: Cargo.toml
crates/ffi/player-ffi-ios/: Cargo.toml
crates/model/player-model/: Cargo.toml
crates/platform/common/player-platform-desktop/: Cargo.toml
crates/platform/common/player-platform-desktop/src/: lib.rs
crates/platform/desktop/player-platform-linux/: Cargo.toml
crates/platform/desktop/player-platform-linux/src/: lib.rs
crates/platform/desktop/player-platform-macos/: Cargo.toml  build.rs
crates/platform/desktop/player-platform-macos/src/: avfoundation_probe.m  lib.rs  native.rs  system.rs
crates/platform/desktop/player-platform-windows/: Cargo.toml
crates/platform/desktop/player-platform-windows/src/: lib.rs
crates/platform/jni/player-jni-android/: Cargo.toml
crates/platform/jni/player-jni-android/src/: download_jni.rs  lib.rs  playlist_jni.rs  preload_jni.rs
crates/platform/mobile/player-platform-android/: Cargo.toml
crates/platform/mobile/player-platform-android/src/: download.rs  lib.rs  playlist.rs  preload.rs
crates/platform/mobile/player-platform-ios/: Cargo.toml
crates/platform/mobile/player-platform-ios/src/: download.rs  lib.rs  playlist.rs  preload.rs
crates/plugin-remux/player-remux-ffmpeg/: Cargo.toml
crates/plugin/player-plugin/: Cargo.toml
crates/plugin/player-plugin-loader/: Cargo.toml
crates/render/player-render-wgpu/: Cargo.toml
docs/: RELEASE-DOWNLOAD-GUIDE.md
examples/android-compose-host/: README.md  settings.gradle.kts
examples/android-compose-host/app/: build.gradle.kts
examples/basic-player/: Cargo.toml
examples/basic-player/src/: desktop_download.rs  desktop_file_dialog.rs  desktop_overlay_ui.rs  desktop_presenter.rs  desktop_ui.rs  host_ui.rs  macos_host_overlay.m  macos_host_overlay.rs  main.rs
examples/c-host/: README.md  main.c
examples/flutter-host/: README.md  pubspec.yaml
examples/flutter-host/android/: settings.gradle.kts
examples/flutter-host/test/: example_player_helpers_test.dart  widget_test.dart
examples/ios-swift-host/: README.md  project.yml
examples/ios-swift-host/Sources/: ExampleDownloadSections.swift  ExampleI18n.swift  ExamplePlayerHelpers.swift  ExamplePlayerModels.swift  ExamplePlayerPreview.swift  ExamplePlayerSections.swift  ExamplePlayerSheet.swift  ExamplePlayerStage.swift  Info.plist  PlayerHostView.swift
include/: player_ffi.h
lib/android/: README.md  build.gradle.kts  settings.gradle.kts
lib/android/vesper-player-kit/: build.gradle.kts  consumer-rules.pro
lib/android/vesper-player-kit-cast/: build.gradle.kts  consumer-rules.pro
lib/android/vesper-player-kit-compose/: build.gradle.kts
lib/android/vesper-player-kit-compose-ui/: build.gradle.kts
lib/flutter/vesper_player/: README.md  pubspec.yaml
lib/flutter/vesper_player_android/: README.md  pubspec.yaml
lib/flutter/vesper_player_cast/: README.md  pubspec.yaml
lib/flutter/vesper_player_ios/: README.md  pubspec.yaml
lib/flutter/vesper_player_macos/: README.md  pubspec.yaml
lib/flutter/vesper_player_platform_interface/: README.md  pubspec.yaml
lib/flutter/vesper_player_ui/: .flutter-plugins-dependencies  README.md  pubspec.yaml
scripts/: README.md  build-android-ffmpeg-prebuilts.sh  build-android-player-ffmpeg-plugin.sh  build-android-player-remux-ffmpeg-plugin.sh  build-android-vesper-player-kit-aar.sh  build-android-vesper-player-kit-jni.sh  build-apple-ffmpeg-prebuilts.sh  build-ios-player-ffi-xcframework.sh  build-ios-player-ffmpeg-plugin.sh  build-ios-player-remux-ffmpeg-plugin.sh  build-ios-vesper-player-kit-xcframework.sh  embed-ios-player-ffmpeg-plugin.sh  embed-ios-player-remux-ffmpeg-plugin.sh  ensure-desktop-ffmpeg.sh  generate-player-ffi-header.sh  generate-release-notes.sh  pkg-config-wrapper.sh  run-c-host-smoke.sh  stage-android-vesper-player-kit-release.sh  stage-ios-vesper-player-kit-release.sh  verify-desktop-decoder-plugin-diagnostics.sh  verify-desktop-decoder-plugin-v2-d3d11.sh  verify-desktop-decoder-plugin-v2-videotoolbox.sh  verify-desktop-player-ffmpeg-remux.sh  verify-desktop-player-remux-ffmpeg.sh  verify-mobile-host-kit-without-player-ffmpeg.sh  verify-mobile-host-kit-without-player-remux-ffmpeg.sh  verify-player-ffi-header.sh  vesper
scripts/android/: build-ffmpeg-prebuilts.sh  build-player-remux-ffmpeg-plugin.sh  build-vesper-player-kit-aar.sh  stage-vesper-player-kit-release.sh
scripts/apple/: build-ffmpeg-prebuilts.sh
scripts/desktop/: verify-player-remux-ffmpeg.sh
scripts/ffi/: generate-player-ffi-header.sh  run-c-host-smoke.sh  verify-player-ffi-header.sh
scripts/ios/: build-player-ffi-xcframework.sh  build-player-remux-ffmpeg-plugin.sh  embed-player-remux-ffmpeg-plugin.sh  stage-vesper-player-kit-release.sh
scripts/lib/: android.sh  apple.sh  common.sh  ffmpeg.sh
scripts/mobile/: verify-host-kit-without-player-remux-ffmpeg.sh
scripts/release/: generate-notes.sh
(+194 files in other folders)
