[package]
name = "basic-player"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
pollster.workspace = true
player-backend-ffmpeg = { path = "../../crates/backend/player-backend-ffmpeg" }
player-host-desktop = { path = "../../crates/platform/desktop/player-host-desktop" }
player-render-wgpu = { path = "../../crates/render/player-render-wgpu" }
player-runtime = { path = "../../crates/core/player-runtime" }
tracing.workspace = true
tracing-subscriber.workspace = true
winit.workspace = true
