[package]
name = "player-decoder-videotoolbox"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
player-plugin = { path = "../../core/player-plugin" }
serde.workspace = true
serde_json.workspace = true
