[package]
name = "player-platform-macos"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
player-backend-ffmpeg = { path = "../../../backend/player-backend-ffmpeg" }
player-platform-apple = { path = "../../common/player-platform-apple" }
player-core = { path = "../../../core/player-core" }
player-platform-desktop = { path = "../../common/player-platform-desktop" }
player-runtime = { path = "../../../core/player-runtime" }
