[package]
name = "player-platform-macos"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
player-backend-ffmpeg = { path = "../../../backend/player-backend-ffmpeg" }
player-platform-apple = { path = "../../common/player-platform-apple" }
player-core = { path = "../../../core/player-core" }
player-plugin = { path = "../../../core/player-plugin" }
player-plugin-loader = { path = "../../../core/player-plugin-loader" }
player-platform-desktop = { path = "../../common/player-platform-desktop" }
player-runtime = { path = "../../../core/player-runtime" }
