[package]
name = "player-platform-android"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
player-core = { path = "../../../core/player-core" }
player-plugin = { path = "../../../core/player-plugin" }
player-plugin-loader = { path = "../../../core/player-plugin-loader" }
player-runtime = { path = "../../../core/player-runtime" }
